Add ansible role for HAProxy and fix RabbitMQ role

--- a/hosts_example.yaml
+++ b/hosts_example.yaml
@@ -3,13 +3,17 @@ all:
     broker_group:
       children:
         rabbitmq_cluster:
-          hosts:
-            rabbitmq-1:
-              ansible_host: 192.168.22.2
-            rabbitmq-2:
-              ansible_host: 192.168.22.3
-            rabbitmq-3:
-              ansible_host: 192.168.22.4
+          children:
+            main:
+              hosts:
+                rabbitmq-1:
+                  ansible_host: 192.168.22.2
+            slaves:
+              hosts:
+                rabbitmq-2:
+                  ansible_host: 192.168.22.3
+                rabbitmq-3:
+                  ansible_host: 192.168.22.4
           vars:
             ansible_user: ansible
             ansible_ssh_private_key_file: /home/user/.ssh/id_rsa
